src/main/java/com/example/goodToKnow/errors/EventNotFoundException.java
package com.example.goodToKnow.errors;

public class EventNotFoundException extends RuntimeException {

}
